--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>The Walking Dead Trivia - Login</title>
+    <title>The Walking Dead Quiz - Login</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
