--- a/game.html
+++ b/game.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>The Walking Dead Quiz - Introduction</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
@@ -10,14 +10,14 @@
     <div class="container">
       <header>
         <center>
-          <h1>Zombie Defeat Trivia Game</h1>
+          <h1>Zombie Defeat Quiz Game</h1>
         </center>
       </header>
         <br><br>
-      <p>Welcome to the Zombie Defeat Trivia Game! </p>
+      <p>Welcome to the Zombie Defeat Quiz Game! </p>
       <br>
       <p>The world is in the danger of a zombie apocalypse and with the help of this game, you'll need to use your knowledge of zombie biology, weapons, and survival skills to find your way through the game and protect yourself from the zombies. You'll have to answer 5 clues correctly to complete the game, but be careful, answering a question wrongly will send you back to the beginning!</p>
-      <br><p><a href="questions.html">Click to get the first clue</a></p>
+      <br><p><a href="questions.html">Click to get the first question</a></p>
     </div>
 
   </body>
