--- a/questions.html
+++ b/questions.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
- <title>The Walking Dead Trivia Challenge</title>
+ <title>The Walking Dead Quiz - Questions</title>
  <link rel="stylesheet" type="text/css" href="styles-ques.css">
  <script type="text/javascript" src="script.js"></script>
 </head>
@@ -9,7 +9,7 @@
  <main class="ques">
    <header>
      <center>
-       <h1>The Walking Dead Trivia Challenge</h1>
+       <h1>The Walking Dead Quiz</h1>
      </center>
    </header>
      <br><br>
