--- a/congrats.html
+++ b/congrats.html
@@ -2,18 +2,18 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>The Walking Dead Quiz - Congratulations</title>
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <div class="container">
       <header>
         <center>
-          <h1>Zombie Defeat Trivia Game</h1>
+          <h1>Zombie Defeat Quiz Game</h1>
         </center>
       </header>
         <br><br>
-      <p>Congratulations on completing the Zombie Defeat Trivia Game! </p>
+      <p>Congratulations on completing the Zombie Defeat Quiz Game! </p>
       <br>
       <p>You have successfully defeated all the zombies and prevented a zombie apocalypse!</p>
       <br><p><a href="questions.html">Click to restart the game</a></p>
