--- a/questions.html
+++ b/questions.html
@@ -9,7 +9,7 @@
  <main class="ques">
    <header>
      <center>
-       <h1>The Walking Dead Quiz</h1>
+       <h1>The Walking Dead Quiz Game</h1>
      </center>
    </header>
      <br><br>
