--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>The Walking Dead Trivia Challenge</h1>
+      <h1>The Walking Dead Quiz Game</h1>
       <h2>Login</h2>
       <form action="game.html">
         <div class="form-group">
